--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+h1 {
+  font-weight: 900;
+  margin-bottom: 32px;
+}
