--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -17,6 +17,7 @@ h1 {
   font-weight: 300;
   font-size: 300%;
   margin-bottom: 32px;
+  letter-spacing: -0.075em;
 }
 
 :root {
@@ -99,7 +100,7 @@ html {
 }
 
 .ListItem {
-  padding: 12px 0;
+  margin-bottom: 32px;
 }
 
 .strike {
@@ -149,7 +150,7 @@ html {
 }
 
 .Filters {
-  margin-bottom: 32px;
+  margin-bottom: 64px;
   display: flex;
   align-items: center;
 }
@@ -168,4 +169,10 @@ html {
 
 .FilterButton.active {
   background: #db6043;
+}
+
+[data-reach-dialog-content] {
+  width: 100% !important;
+  max-width: 33rem !important;
+  background: #4e5562 !important;
 }
